Implementação dos método de CRUD + Swagger
