# public/swagger/openapi.yml
@@ -1,5 +1,28 @@
 components:
   schemas:
+    Alive:
+      properties:
+        app:
+          example: I'm alive!
+          type: string
+      type: object
+    Deletion:
+      properties:
+        code:
+          type: integer
+        label:
+          type: string
+        message:
+          type: string
+        params:
+          items:
+            type: string
+          type: array
+        success:
+          type: boolean
+      required:
+      - code
+      type: object
     Link:
       properties:
         href:
@@ -30,6 +53,7 @@ components:
     PingSchema:
       properties:
         message:
+          example: PONG
           type: string
       type: object
     RequestControl:
@@ -50,10 +74,56 @@ components:
         comite:
           type: string
         currency:
+          example: BRL
           type: string
         file:
           type: string
         identification:
+          example: ISO 9001:2015
+          type: string
+        language:
+          example: Portuguese
+          type: string
+        objective:
+          type: string
+        organization:
+          example: "ABNT - Associa\xE7\xE3o Brasileira de Normas T\xE9cnicas"
+          type: string
+        pages:
+          type: integer
+        price:
+          example: 170
+          type: number
+        publication_date:
+          format: date
+          type: string
+        status:
+          example: Arquivado
+          type: string
+        title:
+          type: string
+        title_global_language:
+          type: string
+        url:
+          format: url
+          type: string
+        uuid:
+          format: uuid
+          type: string
+        validity_start:
+          format: date
+          type: string
+      type: object
+    StandardCreateRequest:
+      properties:
+        comite:
+          type: string
+        currency:
+          type: string
+        file:
+          type: string
+        identification:
+          example: ISO 9001:2015
           type: string
         language:
           type: string
@@ -77,14 +147,50 @@ components:
         url:
           format: url
           type: string
-        uuid:
-          format: uuid
-          type: string
         validity_start:
           format: date
           type: string
       type: object
-    StandardList:
+    StandardCreateResponse:
+      properties:
+        control:
+          $ref: '#/components/schemas/RequestControl'
+        data:
+          $ref: '#/components/schemas/Standard'
+        links:
+          items:
+            $ref: '#/components/schemas/Link'
+          type: array
+        meta:
+          $ref: '#/components/schemas/Meta'
+      type: object
+    StandardDeleteResponse:
+      properties:
+        control:
+          $ref: '#/components/schemas/RequestControl'
+        data:
+          $ref: '#/components/schemas/Deletion'
+        links:
+          items:
+            $ref: '#/components/schemas/Link'
+          type: array
+        meta:
+          $ref: '#/components/schemas/Meta'
+      type: object
+    StandardGetResponse:
+      properties:
+        control:
+          $ref: '#/components/schemas/RequestControl'
+        data:
+          $ref: '#/components/schemas/Standard'
+        links:
+          items:
+            $ref: '#/components/schemas/Link'
+          type: array
+        meta:
+          $ref: '#/components/schemas/Meta'
+      type: object
+    StandardListResponse:
       properties:
         control:
           $ref: '#/components/schemas/RequestControl'
@@ -99,11 +205,71 @@ components:
         meta:
           $ref: '#/components/schemas/Meta'
       type: object
+    StandardUpdateRequest:
+      properties:
+        comite:
+          type: string
+        currency:
+          type: string
+        file:
+          type: string
+        identification:
+          example: ISO 9001:2015
+          type: string
+        language:
+          type: string
+        objective:
+          type: string
+        organization:
+          type: string
+        pages:
+          type: integer
+        price:
+          type: number
+        publication_date:
+          format: date
+          type: string
+        status:
+          type: string
+        title:
+          type: string
+        title_global_language:
+          type: string
+        url:
+          format: url
+          type: string
+        validity_start:
+          format: date
+          type: string
+      type: object
+    StandardUpdateResponse:
+      properties:
+        control:
+          $ref: '#/components/schemas/RequestControl'
+        data:
+          $ref: '#/components/schemas/Standard'
+        links:
+          items:
+            $ref: '#/components/schemas/Link'
+          type: array
+        meta:
+          $ref: '#/components/schemas/Meta'
+      type: object
 info:
   title: standard-manager-api
   version: 1.0.0
 openapi: 3.0.2
 paths:
+  /alive:
+    get:
+      responses:
+        '200':
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Alive'
+          description: Success response
+      summary: Service Health Method
   /ping:
     get:
       responses:
@@ -113,7 +279,7 @@ paths:
               schema:
                 $ref: '#/components/schemas/PingSchema'
           description: Success response
-      summary: PING method
+      summary: Ping method
   /v1/standard:
     get:
       responses:
@@ -121,6 +287,78 @@ paths:
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/StandardList'
+                $ref: '#/components/schemas/StandardListResponse'
           description: Success response
       summary: List all standards
+    post:
+      requestBody:
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/StandardCreateRequest'
+        description: Objeto a ser criado
+        required: true
+      responses:
+        '200':
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/StandardCreateResponse'
+      summary: Create Standard
+  /v1/standard/{uuid}:
+    delete:
+      parameters:
+      - description: Standard uuid
+        in: path
+        name: uuid
+        required: true
+        schema:
+          format: UUID
+          type: string
+      responses:
+        '200':
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/StandardDeleteResponse'
+      summary: Delete Standard
+    get:
+      parameters:
+      - description: Standard uuid
+        in: path
+        name: uuid
+        required: true
+        schema:
+          format: UUID
+          type: string
+      responses:
+        '200':
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/StandardGetResponse'
+          description: Success response
+      summary: Get Standard
+    put:
+      parameters:
+      - description: Standard uuid
+        in: path
+        name: uuid
+        required: true
+        schema:
+          format: UUID
+          type: string
+      requestBody:
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/StandardUpdateRequest'
+        description: Objeto a ser atualizado
+        required: true
+      responses:
+        '200':
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/StandardUpdateResponse'
+      summary: Update Standard
